# dverf

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
crates/dverf_device/: Cargo.toml
crates/dverf_device/src/: consts.rs  device.rs  err.rs  lib.rs  ty.rs
crates/dverf_hackrf/: Cargo.toml
crates/dverf_hackrf/src/: device.rs  err.rs  lib.rs
dverf/: Cargo.toml
dverf/src/: common.rs  device.rs  internals.rs  lib.rs
dverf_app/: Cargo.toml
dverf_app/src/: backend.rs  main.rs
examples/: readme.md
examples/device_info/: Cargo.toml
examples/device_info/src/: main.rs
examples/device_interface/: Cargo.toml
examples/device_interface/src/: main.rs
examples/replay/: Cargo.toml
examples/replay/src/: main.rs
examples/shared/: Cargo.toml
examples/shared/src/: lib.rs
examples/simple_receive/: Cargo.toml
examples/simple_receive/src/: main.rs
