[workspace]
resolver = "2"
members = ["dverf", "examples/*"]

[workspace.package]
edition = "2024"
authors = ["Danil Karpenko <limpix31@gmail.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["sdr", "ham", "hackrf"]
description = "HackRF One toolkit in pure Rust"
repository = "https://github.com/sigma-logic/dverf.git"
homepage = "https://github.com/sigma-logic/dverf#readme"

[workspace.dependencies]
dverf = { path = "dverf" }
shared = { path = "examples/shared" }
anyhow = { version = "1" }

[workspace.lints.rust]
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
missing_errors_doc = { level = "allow" }
must_use_candidate = { level = "allow" }
doc_markdown = { level = "allow" }
multiple_crate_versions = { level = "allow" }
cargo_common_metadata = { level = "allow" }
similar_names = { level = "allow" }
