[package]
name = "dverf"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../readme.md"

[dependencies]
thiserror = { version = "2" }
futures = { version = "0.3" }
nusb = { version = "0.1" }
num_enum = { version = "0.7" }
num = { version = "0.4" }

[lints]
workspace = true
