[package]
name = "replay"
version = "0.1.0"
edition.workspace = true

[dependencies]
dverf = { workspace = true, features = ["internals"] }
anyhow.workspace = true
shared.workspace = true

futures = { version = "0.3" }
async-executor = { version = "1" }
nusb = { version = "0.1" }
async-fs = { version = "2" }
