[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-executor = { version = "1" }
futures = { version = "0.3" }

[lints]
workspace = true
